--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 }
 
 h1 {
-  text-align: center;
+  text-align: center
 }
 
 h4 {
@@ -35,7 +35,6 @@ h4 {
   margin-top: 5px;
 }
 
-/*was .grid-box*/
 .color-boxes {
   width: 650px;
   height: 450px;
@@ -52,19 +51,24 @@ h4 {
   border: 1px black solid;
 }
 
+.emptyBox{
+  height:10px;
+  width: 10px;
+  background-color: white;
+  border: 1px black solid;
+}
+
 .selectorText{
   text-align: center;
   margin: 0;
 }
 
-/*used to be .color-swatches-container*/
 .colorSelector {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
 }
 
-/*used to be .color-swatches*/
 .pickAColor {
   width: 25px;
 	height: 25px;
@@ -153,10 +157,6 @@ h4 {
 
 #white{
   background-color: white;
-}
-
-#antiqueWhite{
-  background-color: AntiqueWhite;
 }
 
 /*not needed bc divs are block?*/
